--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,3 +33,10 @@ code {
   justify-content: center;
   align-items: center;
 }
+
+.fade {animation: fadeIn 2s; }
+
+@keyframes fadeIn {
+  0% { opacity: 0;}
+  100% {opacity: 1;}
+}
